@@ -9,6 +9,6 @@
      "3.4"
  ],
  "url": "https://bitbucket.org/mathematicalcoffee/maximus-gnome-shell-extension",
- "version": 1,
+ "version": 4,
  "dev-version": "1.3"
 }
